[tool]
[tool.poetry]
name = "RiboGraphViz"
version = "0.1.0"
homepage = "https://github.com/h-ahl/RiboGraphViz"
description = "RNAGraph: Visualize global properties of large RNAs using force-directed layout from GraphViz."
authors = ["Hannah Wayment-Steele <hannah.wayment.steele@gmail.com>",
	   "Henrik Åhl <h.ahl@instadeep.com>"]
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
    {include = "ribographviz"},
    {include = "tests", format = "sdist"},
]
include = []

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"

mypy = "^1.10.1"
tox = "^4.16.0"
pip = "^24.1.2"
toml = "^0.10.2"
pre-commit = "^3.7.1"

pytest = "^8.2.2"
pytest-cov = "^5.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.4"
numpy = "^1.24.0"
ruff = "^0.5.3"
bump-my-version = "^0.24.3"
networkx = "^3.3"
matplotlib = "^3.9.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
tox = "^4.16.0"
pre-commit = "^3.7.1"
pip = "^24.1.2"
toml = "^0.10.2"
ruff = "^0.5.3"
bump-my-version = "^0.24.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.coverage.report]
fail_under = 0

[tool.ruff]
fix = true
show-fixes = true
line-length = 120
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "I", # isort
  "F", # Pyflakes
  "E", # pycodestyle (errors)
  "W", # pycodestyle (warnings)
  "N", # pep8-naming
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "PT", # flake8-pytest-style
  "UP", # pyupgrade
  "TID", # flake8-tidy-imports
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "FLY", # flynt
  "TRY", # tryceratops
  "NPY", # NumPy-specific rules
  "C901", # Cognitive complexity,
]
ignore = [
  "B023", # allow using local variable in for-loops
  "NPY002", # allow legacy np.random usage
  "TRY003", # allow long messages in exceptions
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
